setup intial table structure

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -40,7 +40,14 @@
                         Sonic: $$<br>
                         Yaris: $
                     </td>
-                    <td colspan="3" class="car-images">
+                    <td class="car-image-cell">
+                        <img src="/car1.png" alt="Honda Fit" class="car-image">
+                    </td>
+                    <td class="car-image-cell">
+                        <img src="/car2.png" alt="Ford Fiesta" class="car-image">
+                    </td>
+                    <td class="car-image-cell">
+                        <img src="/car3.png" alt="Toyota Yaris" class="car-image">
                     </td>
                 </tr>
                 <tr class="years-row">
@@ -61,9 +68,26 @@
                     <td>Limited space in sedan. Early Sync system is clunky. Interior plastics share same cheap feel as in the Focus</td>
                     <td>Automatic transmission can be lethargic. Some find the seating position awkward. Options are lacking in base trims</td>
                 </tr>
+                <tr class="problems-row">
+                    <td>Common Problem<br>Areas & Issues</td>
+                    <td>Starter, Power Steering, Clear Coat Peeling, A/C</td>
+                    <td><span class="warning">!!!Automatic Transmissions!!!</span> Ford Powershift Automatic is subject to a multimillion dollar class action lawsuit, Avoid!</td>
+                    <td>Clear Coat Peeling, A/C System, ABS System, Fuel Pump</td>
+                </tr>
+                <!-- Split the alternates-row into two separate rows -->
+                <tr class="alternates-row highlight-blue">
+                    <td rowspan="2">Alternates &<br>Honorable Mentions</td>
+                    <td>Mitsubishi Mirage (2014+)<br>Reliable hatchback that offered good MPG's & rock bottom pricing for late model examples.</td>
+                    <td>Chevy Sonic (12-16)<br>This fun to drive hatch offers a spacious cabin & lots of features.</td>
+                    <td>Toyota Prius C (12-16)<br>Nearly 50 EPA-combined MPG ratings. Reliable models can be had around 300k+.</td>
+                </tr>
+                <tr class="alternates-row highlight-blue">
+                    <td>Options can be spartan but overall good value for money.</td>
+                    <td>Interior looks/feels cheap & back seat is tiny but great daily driver.</td>
+                    <td>Without engine issues, great for city commuting.</td>
+                </tr>
             </tbody>
         </table>
     </div>
 </body>
 </html>
-
