--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </td>
                 </tr>
                 <tr class="car-headers">
-                    <th class="cost-column">Cost to Own</th>
+                    <th class="cost-column"></th>
                     <th>Honda Fit</th>
                     <th>Ford Fiesta</th>
                     <th>Toyota Yaris</th>
@@ -29,6 +29,7 @@
             <tbody>
                 <tr class="cost-row">
                     <td class="cost-data">
+                        Cost to Own<br>
                         Low----------High<br>
                         $, $$, $$$, $$$$, $$$$$<br>
                         Fiesta: $-$$<br>
@@ -41,13 +42,13 @@
                         Yaris: $
                     </td>
                     <td class="car-image-cell">
-                        <img src="/car1.png" alt="Honda Fit" class="car-image">
+                        <img src="/images/car1.png" alt="Honda Fit" class="car-image">
                     </td>
                     <td class="car-image-cell">
-                        <img src="/car2.png" alt="Ford Fiesta" class="car-image">
+                        <img src="/images/car2.png" alt="Ford Fiesta" class="car-image">
                     </td>
                     <td class="car-image-cell">
-                        <img src="/car3.png" alt="Toyota Yaris" class="car-image">
+                        <img src="/images/car3.png" alt="Toyota Yaris" class="car-image">
                     </td>
                 </tr>
                 <tr class="years-row">
@@ -74,7 +75,6 @@
                     <td><span class="warning">!!!Automatic Transmissions!!!</span> Ford Powershift Automatic is subject to a multimillion dollar class action lawsuit, Avoid!</td>
                     <td>Clear Coat Peeling, A/C System, ABS System, Fuel Pump</td>
                 </tr>
-                <!-- Split the alternates-row into two separate rows -->
                 <tr class="alternates-row highlight-blue">
                     <td rowspan="2">Alternates &<br>Honorable Mentions</td>
                     <td>Mitsubishi Mirage (2014+)<br>Reliable hatchback that offered good MPG's & rock bottom pricing for late model examples.</td>
