--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <table>
+        <table class="desktop-table">
             <thead>
                 <tr>
                     <th colspan="4" class="main-header">Sub-Compacts</th>
@@ -87,6 +87,157 @@
                     <td>Without engine issues, great for city commuting.</td>
                 </tr>
             </tbody>
+        </table>
+
+        <!-- Mobile Tables -->
+        <table class="mobile-table">
+            <tr>
+                <th colspan="2" class="main-header">Sub-Compacts</th>
+            </tr>
+            <tr class="car-headers">
+                <th class="cost-column"></th>
+                <th>Honda Fit</th>
+            </tr>
+            <tr class="cost-row">
+                <td class="cost-data cost-label">
+                    Cost to Own<br>
+                    Low----------High<br>
+                    $, $$, $$$, $$$$, $$$$$<br>
+                    Fiesta: $-$$<br>
+                    Fit: $<br>
+                    IQ: $<br>
+                    Mirage: $<br>
+                    Prius C: $-$$<br>
+                    Rio/Accent: $<br>
+                    Sonic: $$<br>
+                    Yaris: $
+                </td>
+                <td class="car-image-cell">
+                    <img src="/images/car1.png" alt="Honda Fit" class="car-image">
+                </td>
+            </tr>
+            <tr>
+                <td>Years & Max Mileage</td>
+                <td>2007-2014<br>100,000 to 200,000 depending on condition</td>
+            </tr>
+            <tr class="highlight-green">
+                <td>Pros</td>
+                <td>Excellent amount of interior space for a car of this size. Impressive MPG's. Spirited handling. Great visibility</td>
+            </tr>
+            <tr class="highlight-pink">
+                <td>Cons</td>
+                <td>Lots of road noise at highway speeds. Base models are sparse. Laggy transmission. Many find seats uncomfortable</td>
+            </tr>
+            <tr class="problems-row">
+                <td>Common Problems</td>
+                <td>Starter, Power Steering, Clear Coat Peeling, A/C</td>
+            </tr>
+            <tr class="alternates-row highlight-blue">
+                <td>Alternates</td>
+                <td>Mitsubishi Mirage (2014+)<br>Reliable hatchback that offered good MPG's & rock bottom pricing for late model examples.</td>
+            </tr>
+            <tr class="alternates-row highlight-blue">
+                <td>Honorable Mentions</td>
+                <td>Options can be spartan but overall good value for money.</td>
+            </tr>
+        </table>
+
+        <table class="mobile-table">
+            <tr class="car-headers">
+                <th class="cost-column"></th>
+                <th>Ford Fiesta</th>
+            </tr>
+            <tr class="cost-row">
+                <td class="cost-data cost-label">
+                    Cost to Own<br>
+                    Low----------High<br>
+                    $, $$, $$$, $$$$, $$$$$<br>
+                    Fiesta: $-$$<br>
+                    Fit: $<br>
+                    IQ: $<br>
+                    Mirage: $<br>
+                    Prius C: $-$$<br>
+                    Rio/Accent: $<br>
+                    Sonic: $$<br>
+                    Yaris: $
+                </td>
+                <td class="car-image-cell">
+                    <img src="/images/car2.png" alt="Ford Fiesta" class="car-image">
+                </td>
+            </tr>
+            <tr>
+                <td>Years & Max Mileage</td>
+                <td class="manual-note">2011-2018 !!!Manual Only!!!<br>100,000 to 150,000 depending on condition</td>
+            </tr>
+            <tr class="highlight-green">
+                <td>Pros</td>
+                <td>Great fuel economy. Top trims are loaded with features. Sporty driving dynamic. Even base engine can be exciting.</td>
+            </tr>
+            <tr class="highlight-pink">
+                <td>Cons</td>
+                <td>Limited space in sedan. Early Sync system is clunky. Interior plastics share same cheap feel as in the Focus</td>
+            </tr>
+            <tr class="problems-row">
+                <td>Common Problems</td>
+                <td><span class="warning">!!!Automatic Transmissions!!!</span> Ford Powershift Automatic is subject to a multimillion dollar class action lawsuit, Avoid!</td>
+            </tr>
+            <tr class="alternates-row highlight-blue">
+                <td>Alternates</td>
+                <td>Chevy Sonic (12-16)<br>This fun to drive hatch offers a spacious cabin & lots of features.</td>
+            </tr>
+            <tr class="alternates-row highlight-blue">
+                <td>Honorable Mentions</td>
+                <td>Interior looks/feels cheap & back seat is tiny but great daily driver.</td>
+            </tr>
+        </table>
+
+        <table class="mobile-table">
+            <tr class="car-headers">
+                <th class="cost-column"></th>
+                <th>Toyota Yaris</th>
+            </tr>
+            <tr class="cost-row">
+                <td class="cost-data cost-label">
+                    Cost to Own<br>
+                    Low----------High<br>
+                    $, $$, $$$, $$$$, $$$$$<br>
+                    Fiesta: $-$$<br>
+                    Fit: $<br>
+                    IQ: $<br>
+                    Mirage: $<br>
+                    Prius C: $-$$<br>
+                    Rio/Accent: $<br>
+                    Sonic: $$<br>
+                    Yaris: $
+                </td>
+                <td class="car-image-cell">
+                    <img src="/images/car3.png" alt="Toyota Yaris" class="car-image">
+                </td>
+            </tr>
+            <tr>
+                <td>Years & Max Mileage</td>
+                <td>2007-2015<br>150,000 to 200,000 depending on condition</td>
+            </tr>
+            <tr class="highlight-green">
+                <td>Pros</td>
+                <td>Comfortable ride, crisp handling, good MPG's. Available as a sedan or hatchback. Avoids price gouging seen in Corolla</td>
+            </tr>
+            <tr class="highlight-pink">
+                <td>Cons</td>
+                <td>Automatic transmission can be lethargic. Some find the seating position awkward. Options are lacking in base trims</td>
+            </tr>
+            <tr class="problems-row">
+                <td>Common Problems</td>
+                <td>Clear Coat Peeling, A/C System, ABS System, Fuel Pump</td>
+            </tr>
+            <tr class="alternates-row highlight-blue">
+                <td>Alternates</td>
+                <td>Toyota Prius C (12-16)<br>Nearly 50 EPA-combined MPG ratings. Reliable models can be had around 300k+.</td>
+            </tr>
+            <tr class="alternates-row highlight-blue">
+                <td>Honorable Mentions</td>
+                <td>Without engine issues, great for city commuting.</td>
+            </tr>
         </table>
     </div>
 </body>
