remoce cell from mobile

--- a/index.html
+++ b/index.html
@@ -95,24 +95,10 @@
                 <th colspan="2" class="main-header">Sub-Compacts</th>
             </tr>
             <tr class="car-headers">
-                <th class="cost-column"></th>
-                <th>Honda Fit</th>
+                <th colspan="2">Honda Fit</th>
             </tr>
-            <tr class="cost-row">
-                <td class="cost-data cost-label">
-                    Cost to Own<br>
-                    Low----------High<br>
-                    $, $$, $$$, $$$$, $$$$$<br>
-                    Fiesta: $-$$<br>
-                    Fit: $<br>
-                    IQ: $<br>
-                    Mirage: $<br>
-                    Prius C: $-$$<br>
-                    Rio/Accent: $<br>
-                    Sonic: $$<br>
-                    Yaris: $
-                </td>
-                <td class="car-image-cell">
+            <tr class="car-image-row">
+                <td colspan="2" class="car-image-cell">
                     <img src="/images/car1.png" alt="Honda Fit" class="car-image">
                 </td>
             </tr>
@@ -144,24 +130,10 @@
 
         <table class="mobile-table">
             <tr class="car-headers">
-                <th class="cost-column"></th>
-                <th>Ford Fiesta</th>
+                <th colspan="2">Ford Fiesta</th>
             </tr>
-            <tr class="cost-row">
-                <td class="cost-data cost-label">
-                    Cost to Own<br>
-                    Low----------High<br>
-                    $, $$, $$$, $$$$, $$$$$<br>
-                    Fiesta: $-$$<br>
-                    Fit: $<br>
-                    IQ: $<br>
-                    Mirage: $<br>
-                    Prius C: $-$$<br>
-                    Rio/Accent: $<br>
-                    Sonic: $$<br>
-                    Yaris: $
-                </td>
-                <td class="car-image-cell">
+            <tr class="car-image-row">
+                <td colspan="2" class="car-image-cell">
                     <img src="/images/car2.png" alt="Ford Fiesta" class="car-image">
                 </td>
             </tr>
@@ -193,24 +165,10 @@
 
         <table class="mobile-table">
             <tr class="car-headers">
-                <th class="cost-column"></th>
-                <th>Toyota Yaris</th>
+                <th colspan="2">Toyota Yaris</th>
             </tr>
-            <tr class="cost-row">
-                <td class="cost-data cost-label">
-                    Cost to Own<br>
-                    Low----------High<br>
-                    $, $$, $$$, $$$$, $$$$$<br>
-                    Fiesta: $-$$<br>
-                    Fit: $<br>
-                    IQ: $<br>
-                    Mirage: $<br>
-                    Prius C: $-$$<br>
-                    Rio/Accent: $<br>
-                    Sonic: $$<br>
-                    Yaris: $
-                </td>
-                <td class="car-image-cell">
+            <tr class="car-image-row">
+                <td colspan="2" class="car-image-cell">
                     <img src="/images/car3.png" alt="Toyota Yaris" class="car-image">
                 </td>
             </tr>
