add first three section

--- a/index.html
+++ b/index.html
@@ -335,14 +335,18 @@
               Yaris: $
             </td>
             <td class="car-image-cell">
-              <img src="/images/car1.png" alt="Honda Fit" class="car-image" />
-            </td>
-            <td class="car-image-cell">
-              <img src="/images/car2.png" alt="Ford Fiesta" class="car-image" />
+              <img src="/images/sec2-1.png" alt="Honda Fit" class="car-image" />
             </td>
             <td class="car-image-cell">
               <img
-                src="/images/car3.png"
+                src="/images/sec2-2.png"
+                alt="Ford Fiesta"
+                class="car-image"
+              />
+            </td>
+            <td class="car-image-cell">
+              <img
+                src="/images/sec2-3.png"
                 alt="Toyota Yaris"
                 class="car-image"
               />
@@ -445,7 +449,7 @@
         </tr>
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
-            <img src="/images/car1.png" alt="Honda Fit" class="car-image" />
+            <img src="/images/sec2-1.png" alt="Honda Fit" class="car-image" />
           </td>
         </tr>
         <tr>
@@ -489,7 +493,7 @@
         </tr>
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
-            <img src="/images/car2.png" alt="Ford Fiesta" class="car-image" />
+            <img src="/images/sec2-2.png" alt="Ford Fiesta" class="car-image" />
           </td>
         </tr>
         <tr>
@@ -543,7 +547,11 @@
         </tr>
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
-            <img src="/images/car3.png" alt="Toyota Yaris" class="car-image" />
+            <img
+              src="/images/sec2-3.png"
+              alt="Toyota Yaris"
+              class="car-image"
+            />
           </td>
         </tr>
         <tr>
@@ -619,18 +627,18 @@
               W Body/G6: $$
             </td>
             <td class="car-image-cell">
-              <img src="/images/car1.png" alt="Scion tC" class="car-image" />
+              <img src="/images/sec3-1.png" alt="Scion tC" class="car-image" />
             </td>
             <td class="car-image-cell">
               <img
-                src="/images/car2.png"
+                src="/images/sec3-2.png"
                 alt="Chevy Cobalt & Pontiac G5"
                 class="car-image"
               />
             </td>
             <td class="car-image-cell">
               <img
-                src="/images/car3.png"
+                src="/images/sec3-3.png"
                 alt="BMW 3 Series"
                 class="car-image"
               />
@@ -743,7 +751,7 @@
         </tr>
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
-            <img src="/images/car1.png" alt="Scion tC" class="car-image" />
+            <img src="/images/sec3-1.png" alt="Scion tC" class="car-image" />
           </td>
         </tr>
         <tr>
@@ -796,7 +804,7 @@
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
             <img
-              src="/images/car2.png"
+              src="/images/sec3-2.png"
               alt="Chevy Cobalt & Pontiac G5"
               class="car-image"
             />
@@ -851,7 +859,11 @@
         </tr>
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
-            <img src="/images/car3.png" alt="BMW 3 Series" class="car-image" />
+            <img
+              src="/images/sec3-3.png"
+              alt="BMW 3 Series"
+              class="car-image"
+            />
           </td>
         </tr>
         <tr>
@@ -937,20 +949,20 @@
             </td>
             <td class="car-image-cell">
               <img
-                src="/images/car1.png"
+                src="/images/sec4-1.png"
                 alt="Scion xA/xB/xD"
                 class="car-image"
               />
             </td>
             <td class="car-image-cell">
               <img
-                src="/images/car2.png"
+                src="/images/sec4-2.png"
                 alt="Ford Focus Hatchback"
                 class="car-image"
               />
             </td>
             <td class="car-image-cell">
-              <img src="/images/car3.png" alt="VW Golf" class="car-image" />
+              <img src="/images/sec4-3.png" alt="VW Golf" class="car-image" />
             </td>
           </tr>
           <tr class="years-row">
@@ -1067,7 +1079,7 @@
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
             <img
-              src="/images/car1.png"
+              src="/images/sec4-1.png"
               alt="Scion xA/xB/xD"
               class="car-image"
             />
@@ -1125,7 +1137,7 @@
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
             <img
-              src="/images/car2.png"
+              src="/images/sec4-2.png"
               alt="Ford Focus Hatchback"
               class="car-image"
             />
@@ -1182,7 +1194,7 @@
         </tr>
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
-            <img src="/images/car3.png" alt="VW Golf" class="car-image" />
+            <img src="/images/sec4-3.png" alt="VW Golf" class="car-image" />
           </td>
         </tr>
         <tr>
@@ -1268,21 +1280,21 @@
             </td>
             <td class="car-image-cell">
               <img
-                src="/images/car1.png"
+                src="/images/sec5-1.png"
                 alt="Toyota Avalon"
                 class="car-image"
               />
             </td>
             <td class="car-image-cell">
               <img
-                src="/images/car2.png"
+                src="/images/sec5-2.png"
                 alt="Ford Crown Victoria"
                 class="car-image"
               />
             </td>
             <td class="car-image-cell">
               <img
-                src="/images/car3.png"
+                src="/images/sec5-3.png"
                 alt="BMW 5 Series"
                 class="car-image"
               />
@@ -1395,7 +1407,11 @@
         </tr>
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
-            <img src="/images/car1.png" alt="Toyota Avalon" class="car-image" />
+            <img
+              src="/images/sec5-1.png"
+              alt="Toyota Avalon"
+              class="car-image"
+            />
           </td>
         </tr>
         <tr>
@@ -1448,7 +1464,7 @@
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
             <img
-              src="/images/car2.png"
+              src="/images/sec5-2.png"
               alt="Ford Crown Victoria"
               class="car-image"
             />
@@ -1503,7 +1519,11 @@
         </tr>
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
-            <img src="/images/car3.png" alt="BMW 5 Series" class="car-image" />
+            <img
+              src="/images/sec5-3.png"
+              alt="BMW 5 Series"
+              class="car-image"
+            />
           </td>
         </tr>
         <tr>
