add more tables

--- a/index.html
+++ b/index.html
@@ -298,25 +298,19 @@
       <table class="desktop-table">
         <thead>
           <tr>
-            <th colspan="4" class="main-header">Sub-Compacts</th>
+            <th colspan="4" class="main-header">Compact Sedans</th>
           </tr>
           <tr>
             <td colspan="4" class="subheader">
-              <em
-                >Small & economical options can be great for those who need
-                little space</em
-              >
-              <span class="blue-note"
-                >!!!Note!!! Due to a lack of applicable vehicles there are no
-                European options in this category</span
-              >
+              For basic, reliable A to B transportation in a small 4 door car,
+              these are the top picks for a compact sedan
             </td>
           </tr>
           <tr class="car-headers">
             <th class="cost-column"></th>
-            <th>Honda Fit</th>
-            <th>Ford Fiesta</th>
-            <th>Toyota Yaris</th>
+            <th>Honda Civic</th>
+            <th>Ford Focus Sedan</th>
+            <th>VW Jetta</th>
           </tr>
         </thead>
         <tbody>
@@ -325,267 +319,225 @@
               Cost to Own<br />
               Low----------High<br />
               $, $$, $$$, $$$$, $$$$$<br />
-              Fiesta: $-$$<br />
-              Fit: $<br />
-              IQ: $<br />
-              Mirage: $<br />
-              Prius C: $-$$<br />
-              Rio/Accent: $<br />
-              Sonic: $$<br />
-              Yaris: $
+              Civic: $-$$<br />
+              Focus: $<br />
+              Jetta: $<br />
             </td>
             <td class="car-image-cell">
-              <img src="/images/sec2-1.png" alt="Honda Fit" class="car-image" />
+              <img src="/images/sec2-1.png" alt="Honda Civic" class="car-image" />
             </td>
             <td class="car-image-cell">
-              <img
-                src="/images/sec2-2.png"
-                alt="Ford Fiesta"
-                class="car-image"
-              />
+              <img src="/images/sec2-2.png" alt="Ford Focus Sedan" class="car-image" />
             </td>
             <td class="car-image-cell">
-              <img
-                src="/images/sec2-3.png"
-                alt="Toyota Yaris"
-                class="car-image"
-              />
+              <img src="/images/sec2-3.png" alt="VW Jetta" class="car-image" />
             </td>
           </tr>
           <tr class="years-row">
             <td>Years & Max Mileage<br />at Purchase</td>
-            <td>2007-2014<br />100,000 to 200,000 depending on condition</td>
+            <td>2006-2014<br />150,000 to 200,000 depending on condition</td>
             <td class="manual-note">
-              2011-2018 !!!Manual Only!!!<br />100,000 to 150,000 depending on
-              condition
+              2008-2011 & 2012-2018 !!!Manual Only!!!<br />100,000 to 200,000 depending on condition
             </td>
-            <td>2007-2015<br />150,000 to 200,000 depending on condition</td>
+            <td>2006-2015<br />100,000 to 200,000 depending on condition</td>
           </tr>
           <tr class="pros-row highlight-green">
             <td>Pros</td>
             <td>
-              Excellent amount of interior space for a car of this size.
-              Impressive MPG's. Spirited handling. Great visibility
+              Extremely reliable, great all-rounder, available in tons of
+              configurations, lots of aftermarket if you want to rice it
             </td>
             <td>
-              Great fuel economy. Top trims are loaded with features. Sporty
-              driving dynamic. Even base engine can be exciting.
+              Good interior layout, decent fuel economy with nice ride quality &
+              sharp steering. Can often be found dirt cheap
             </td>
             <td>
-              Comfortable ride, crisp handling, good MPG's. Available as a sedan
-              or hatchback. Avoids price gouging seen in Corolla
+              Comfortable ride paired with a good drivetrain, solid handling &
+              lots of features. TDI drivetrain is almost unkillable
             </td>
           </tr>
           <tr class="cons-row highlight-pink">
             <td>Cons</td>
             <td>
-              Lots of road noise at highway speeds. Base models are sparse.
-              Laggy transmission. Many find seats uncomfortable
+              Lots have been badly modified, poorly cared for, or both. Lower trims can be very sparse on features. Rice Tax
             </td>
             <td>
-              Limited space in sedan. Early Sync system is clunky. Interior
-              plastics share same cheap feel as in the Focus
+              Interior materials are subpar. Often missing basic features. Doesn't have competitors' reputation of quality/reliability
             </td>
             <td>
-              Automatic transmission can be lethargic. Some find the seating
-              position awkward. Options are lacking in base trims
+              Gas fuel economy fairly poor in class. Interior can be tight, especially back seats, & feels cheap. Electrical Gremlins
             </td>
           </tr>
           <tr class="problems-row">
             <td>Common Problem<br />Areas & Issues</td>
-            <td>Starter, Power Steering, Clear Coat Peeling, A/C</td>
-            <td>
-              <span class="warning">!!!Automatic Transmissions!!!</span> Ford
-              Powershift Automatic is subject to a multimillion dollar class
-              action lawsuit, Avoid!
-            </td>
-            <td>Clear Coat Peeling, A/C System, ABS System, Fuel Pump</td>
+            <td>Automatic Transmission, Poor Aftermarket Modifications, Coolant Leaks & Block cracking on pre-09 Models, Paint</td>
+            <td>!!!2012+ Automatic Transmission!!! Valve Cover Gasket, Tie-Rods & Struts, Thermostat, Door Lock Actuators, Peeling Paint</td>
+            <td>Electrical Accessories, ABS Module, Ignition Switch, Window Regulators, Factory Radio, Timing Chain & Tensioner</td>
           </tr>
           <tr class="alternates-row highlight-blue">
             <td rowspan="2">Alternates &<br />Honorable Mentions</td>
             <td>
-              Mitsubishi Mirage (2014+)<br />Reliable hatchback that offered
-              good MPG's & rock bottom pricing for late model examples.
+              Toyota Corolla (07-13)<br />Excellent engines matched with top tier build quality. Solid & spacious interior. Reputation for reliability inflates prices.
             </td>
             <td>
-              Chevy Sonic (12-16)<br />This fun to drive hatch offers a spacious
-              cabin & lots of features.
+              Chevy Cruze (2011-2015)<br />Reliable, good fuel economy & surprisingly sharp handling. Top Safety Scores. Cramped, Seats not that comfortable.
             </td>
             <td>
-              Toyota Prius C (12-16)<br />Nearly 50 EPA-combined MPG ratings.
-              Reliable models can be had around 300k+.
+              Volvo S40 (04-12) & Volvo S60 (10-18)<br />Great features & quality with optional AWD & turbocharged engines. Ride quality could be better. Non-turbo is sluggish.
             </td>
           </tr>
           <tr class="alternates-row highlight-blue">
-            <td>Options can be spartan but overall good value for money.</td>
             <td>
-              Interior looks/feels cheap & back seat is tiny but great daily
-              driver.
+              Mazda3 (04-15)<br />Offers sharp handling & an athletic 2.5L engine. Comes as a sedan & hatchback. Snag a Mazdaspeed 3 if you can find one
             </td>
-            <td>Without engine issues, great for city commuting.</td>
+            <td>
+              Kia Forte (10-12) & Hyundai Elantra (07-13)<br />Korean alternatives offer good fuel economy, decent options, & affordability at the cost of "meh" quality
+            </td>
+            <td>
+              BMW 3 Series (06-11) & Mercedes C Class (08-11)<br />BMW brings more performance & Mercedes more luxury. Not DIYing means high maintenance, repair & upkeep costs
+            </td>
           </tr>
         </tbody>
       </table>
-
       <!-- Mobile Tables -->
       <table class="mobile-table">
         <tr>
-          <th colspan="2" class="main-header">Sub-Compacts</th>
+          <th colspan="2" class="main-header">Compact Sedans</th>
         </tr>
         <tr>
           <td colspan="2" class="subheader">
-            <em
-              >Small & economical options can be great for those who need little
-              space</em
-            >
-            <span class="blue-note"
-              >!!!Note!!! Due to a lack of applicable vehicles there are no
-              European options in this category</span
-            >
+            For basic, reliable A to B transportation in a small 4 door car,
+            these are the top picks for a compact sedan
           </td>
         </tr>
         <tr class="car-headers">
-          <th colspan="2">Honda Fit</th>
+          <th colspan="2">Honda Civic</th>
         </tr>
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
-            <img src="/images/sec2-1.png" alt="Honda Fit" class="car-image" />
+            <img src="/images/sec2-1.png" alt="Honda Civic" class="car-image" />
           </td>
         </tr>
         <tr>
           <td>Years & Max Mileage</td>
-          <td>2007-2014<br />100,000 to 200,000 depending on condition</td>
+          <td>2006-2014<br />150,000 to 200,000 depending on condition</td>
         </tr>
         <tr class="highlight-green">
           <td>Pros</td>
           <td>
-            Excellent amount of interior space for a car of this size.
-            Impressive MPG's. Spirited handling. Great visibility
+            Extremely reliable, great all-rounder, available in tons of
+            configurations, lots of aftermarket if you want to rice it
           </td>
         </tr>
         <tr class="highlight-pink">
           <td>Cons</td>
           <td>
-            Lots of road noise at highway speeds. Base models are sparse. Laggy
-            transmission. Many find seats uncomfortable
+            Lots have been badly modified, poorly cared for, or both. Lower trims can be very sparse on features. Rice Tax
           </td>
         </tr>
         <tr class="problems-row">
           <td>Common Problems</td>
-          <td>Starter, Power Steering, Clear Coat Peeling, A/C</td>
+          <td>Automatic Transmission, Poor Aftermarket Modifications, Coolant Leaks & Block cracking on pre-09 Models, Paint</td>
         </tr>
         <tr class="alternates-row highlight-blue">
           <td>Alternates</td>
           <td>
-            Mitsubishi Mirage (2014+)<br />Reliable hatchback that offered good
-            MPG's & rock bottom pricing for late model examples.
+            Toyota Corolla (07-13)<br />Excellent engines matched with top tier build quality. Solid & spacious interior. Reputation for reliability inflates prices.
           </td>
         </tr>
         <tr class="alternates-row highlight-blue">
           <td>Honorable Mentions</td>
-          <td>Options can be spartan but overall good value for money.</td>
+          <td>
+            Mazda3 (04-15)<br />Offers sharp handling & an athletic 2.5L engine. Comes as a sedan & hatchback. Snag a Mazdaspeed 3 if you can find one
+          </td>
         </tr>
       </table>
-
       <table class="mobile-table">
         <tr class="car-headers">
-          <th colspan="2">Ford Fiesta</th>
+          <th colspan="2">Ford Focus Sedan</th>
         </tr>
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
-            <img src="/images/sec2-2.png" alt="Ford Fiesta" class="car-image" />
+            <img src="/images/sec2-2.png" alt="Ford Focus Sedan" class="car-image" />
           </td>
         </tr>
         <tr>
           <td>Years & Max Mileage</td>
           <td class="manual-note">
-            2011-2018 !!!Manual Only!!!<br />100,000 to 150,000 depending on
-            condition
+            2008-2011 & 2012-2018 !!!Manual Only!!!<br />100,000 to 200,000 depending on condition
           </td>
         </tr>
         <tr class="highlight-green">
           <td>Pros</td>
           <td>
-            Great fuel economy. Top trims are loaded with features. Sporty
-            driving dynamic. Even base engine can be exciting.
+            Good interior layout, decent fuel economy with nice ride quality &
+            sharp steering. Can often be found dirt cheap
           </td>
         </tr>
         <tr class="highlight-pink">
           <td>Cons</td>
           <td>
-            Limited space in sedan. Early Sync system is clunky. Interior
-            plastics share same cheap feel as in the Focus
+            Interior materials are subpar. Often missing basic features. Doesn't have competitors' reputation of quality/reliability
           </td>
         </tr>
         <tr class="problems-row">
           <td>Common Problems</td>
-          <td>
-            <span class="warning">!!!Automatic Transmissions!!!</span> Ford
-            Powershift Automatic is subject to a multimillion dollar class
-            action lawsuit, Avoid!
-          </td>
+          <td>!!!2012+ Automatic Transmission!!! Valve Cover Gasket, Tie-Rods & Struts, Thermostat, Door Lock Actuators, Peeling Paint</td>
         </tr>
         <tr class="alternates-row highlight-blue">
           <td>Alternates</td>
           <td>
-            Chevy Sonic (12-16)<br />This fun to drive hatch offers a spacious
-            cabin & lots of features.
+            Chevy Cruze (2011-2015)<br />Reliable, good fuel economy & surprisingly sharp handling. Top Safety Scores. Cramped, Seats not that comfortable.
           </td>
         </tr>
         <tr class="alternates-row highlight-blue">
           <td>Honorable Mentions</td>
           <td>
-            Interior looks/feels cheap & back seat is tiny but great daily
-            driver.
+            Kia Forte (10-12) & Hyundai Elantra (07-13)<br />Korean alternatives offer good fuel economy, decent options, & affordability at the cost of "meh" quality
           </td>
         </tr>
       </table>
-
       <table class="mobile-table">
         <tr class="car-headers">
-          <th colspan="2">Toyota Yaris</th>
+          <th colspan="2">VW Jetta</th>
         </tr>
         <tr class="car-image-row">
           <td colspan="2" class="car-image-cell">
-            <img
-              src="/images/sec2-3.png"
-              alt="Toyota Yaris"
-              class="car-image"
-            />
+            <img src="/images/sec2-3.png" alt="VW Jetta" class="car-image" />
           </td>
         </tr>
         <tr>
           <td>Years & Max Mileage</td>
-          <td>2007-2015<br />150,000 to 200,000 depending on condition</td>
+          <td>2006-2015<br />100,000 to 200,000 depending on condition</td>
         </tr>
         <tr class="highlight-green">
           <td>Pros</td>
           <td>
-            Comfortable ride, crisp handling, good MPG's. Available as a sedan
-            or hatchback. Avoids price gouging seen in Corolla
+            Comfortable ride paired with a good drivetrain, solid handling &
+            lots of features. TDI drivetrain is almost unkillable
           </td>
         </tr>
         <tr class="highlight-pink">
           <td>Cons</td>
           <td>
-            Automatic transmission can be lethargic. Some find the seating
-            position awkward. Options are lacking in base trims
+            Gas fuel economy fairly poor in class. Interior can be tight, especially back seats, & feels cheap. Electrical Gremlins
           </td>
         </tr>
         <tr class="problems-row">
           <td>Common Problems</td>
-          <td>Clear Coat Peeling, A/C System, ABS System, Fuel Pump</td>
+          <td>Electrical Accessories, ABS Module, Ignition Switch, Window Regulators, Factory Radio, Timing Chain & Tensioner</td>
         </tr>
         <tr class="alternates-row highlight-blue">
           <td>Alternates</td>
           <td>
-            Toyota Prius C (12-16)<br />Nearly 50 EPA-combined MPG ratings.
-            Reliable models can be had around 300k+.
+            Volvo S40 (04-12) & Volvo S60 (10-18)<br />Great features & quality with optional AWD & turbocharged engines. Ride quality could be better. Non-turbo is sluggish.
           </td>
         </tr>
         <tr class="alternates-row highlight-blue">
           <td>Honorable Mentions</td>
-          <td>Without engine issues, great for city commuting.</td>
+          <td>
+            BMW 3 Series (06-11) & Mercedes C Class (08-11)<br />BMW brings more performance & Mercedes more luxury. Not DIYing means high maintenance, repair & upkeep costs
+          </td>
         </tr>
       </table>
     </div>
